# Birthday_wishPassportData

./: app.py  data_visualization.py  message_templates.json  message_templates.py  package-lock.json  package.json  passport_service.py  passports.xlsx  pyproject.toml  requirements.txt  sample_passports.xlsx  utils.py  whatsapp_service.py
attached_assets/: Pasted-import-pandas-as-pd-import-pywhatkit-import-datetime-import-time-import-re-Load-Excel-df--1747029503952.txt
