[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "plotly>=6.0.1",
    "pywhatkit>=5.4",
    "requests>=2.32.3",
    "streamlit>=1.45.0",
    "twilio>=9.6.0",
]
